ng-cloak added to every ng page to prevent page flickering

--- a/css/main.css
+++ b/css/main.css
@@ -1154,3 +1154,8 @@ RETINA (2x RESOLUTION DEVICES)
 *********************/
 
 /*# sourceMappingURL=style.css.map */
+
+
+[ng\:cloak], [ng-cloak], .ng-cloak {
+  display: none !important;
+}
